Fixed footer in contact page, was not showing properly before.

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -24,7 +24,7 @@
         text-align: center;
 
         @include mobile {
-            gap: 20px;
+            gap: 80px;
             align-items: center;
         }
 
@@ -117,6 +117,16 @@
             .email-result-container {
                 padding-top: 1rem;
             }
+        }
+    }
+
+    .footer {
+        height: 50px;
+        color: white;
+
+        @include mobile {
+            display: flex;
+            align-items: end;
         }
     }
 }
